--- a/index.html
+++ b/index.html
@@ -88,6 +88,15 @@
 							<section id="three">
 								<div class="container">
 									<h3>Talks</h3>
+                                        <article>
+											<p>
+                                            <strong>Hereditary rings and metric completions of their derived categories</strong> at
+                                            <a href="https://www.math.uni-bielefeld.de/birep/seminar.php" target="_blank" style="text-decoration: underline;">
+                                                BIREP Seminar</a>.
+                                                <br>
+                                                Bielefeld University, Germany, 15 October 2025
+                                            </p>
+                                        </article>
                                     	<article>
 											<p>
                                             <strong>Metric completions from finite dimensional algebras</strong> at
