--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
                                         <article>
 											<p>
                                             <strong>Hereditary rings and metric completions of their derived categories</strong> at
+                                            <a href="https://math.uni-paderborn.de/ag/arbeitsgruppe-algebra/lehre/oberseminar-ws-26" target="_blank" style="text-decoration: underline;">
+                                                Algebra and Algebraic Geometry Seminar</a>.
+                                                <br>
+                                                Paderborn University, Germany, 22 October 2025
+                                            </p>
+                                        </article>
+                                        <article>
+											<p>
+                                            <strong>Hereditary rings and metric completions of their derived categories</strong> at
                                             <a href="https://www.math.uni-bielefeld.de/birep/seminar.php" target="_blank" style="text-decoration: underline;">
                                                 BIREP Seminar</a>.
                                                 <br>
