--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                                     I am a third-year Ph.D. student of mathematics at Aarhus University, Denmark, under the supervision
                                     of&nbsp;<a href="https://sites.google.com/view/siragratz/home" target="_blank" style="text-decoration: underline;">Sira Gratz
                                     </a>.
-                                    My main research interests are homological algebra and the represetation theory of&nbsp;quivers and finite-dimensional algebras. I currently work with triangulated and derived categories arising in representation theory.
+                                    My main research interests are homological algebra and the representation theory of&nbsp;quivers and finite-dimensional algebras. I currently work with triangulated and derived categories arising in representation theory.
                                     I&nbsp;am also interested in the approximation theory of modules.
                                     </p>			
                                     <p>
