--- a/index.html
+++ b/index.html
@@ -91,6 +91,15 @@
                                         <article>
 											<p>
                                             <strong>Hereditary rings and metric completions of their derived categories</strong> at
+                                            <a href="https://sites.google.com/view/oberseminar-algebra-koeln/home" target="_blank" style="text-decoration: underline;">
+                                                Köln Algebra and Representation Theory Seminar</a>.
+                                                <br>
+                                                University of Cologne, Germany, 4 November 2025
+                                            </p>
+                                        </article>
+                                        <article>
+											<p>
+                                            <strong>Hereditary rings and metric completions of their derived categories</strong> at
                                             <a href="https://math.uni-paderborn.de/ag/arbeitsgruppe-algebra/lehre/oberseminar-ws-26" target="_blank" style="text-decoration: underline;">
                                                 Algebra and Algebraic Geometry Seminar</a>.
                                                 <br>
