--- a/index.html
+++ b/index.html
@@ -66,19 +66,19 @@
 								<div class="container">
 									<h3>Preprints</h3>
 										<article>
-											<p><a href="https://arxiv.org/abs/2508.20283" target="_blank" style="text-decoration: underline; font-weight: bold;">
+											<p><a href="https://arxiv.org/abs/2508.20283v2" target="_blank" style="text-decoration: underline; font-weight: bold;">
                                                     Metric completions of triangulated categories from hereditary rings
                                                 </a>
                                                 <br>
-                                                    arXiv:2508.20283, 2025
+                                                    arXiv:2508.20283v2
                                                 </p>
                                             </article>
                                             <article>	
-											<p><a href="https://arxiv.org/abs/2409.01828v2" target="_blank" style="text-decoration: underline; font-weight: bold;">
+											<p><a href="https://arxiv.org/abs/2409.01828v3" target="_blank" style="text-decoration: underline; font-weight: bold;">
                                                    Metric completions of triangulated categories from finite dimensional algebras
                                                 </a>
                                                 <br>
-                                                    arXiv:2409.01828v2, 2024
+                                                    arXiv:2409.01828v3
                                                 </p>	
 										</article>
 								</div>
